# valjni

./: .gitignore  ImplementationNote.md  README.md  build.gradle  clean.sh  gradlew  javah_generate.sh  jni-memchk.txt  rebuild.sh  run.sh  run_without_inspect.sh  update_dropbox_at_home_only.sh
doc/: DesignOfJniEnvironmentSimulation.md
src/java/com/valjni/sample/: JniUtilityWrapper.java  TestJniUtility.java
src/main/: CMakeLists.txt  monitor-and-test.sh  rebuild.sh  test-jni-server.sh
src/main/java/com/valjni/caller/: JniCall.java  JniCallMessage.java  JniClientImplementation.java  JniClientInterface.java  JniMessage.java  JniMessageUtility.java  JniValue.java
src/main/java/com/valjni/core/: JniInterceptAgent.java  JniInterceptor.java  JniProcessClient.java  JniProxy.java
src/main/java/com/valjni/example/: JniExample.java  JniExampleMain.java
src/main/jni/: CMakeLists.txt
src/main/jni/client/: CMakeLists.txt  InvokeJniClient.cpp  JniArgumentRepository.cpp  JniArgumentRepository.h  JniClient.cpp  JniClient.h  JniEnvWrapper.cpp  JniEnvWrapper.h  ValJniException.h  com_valjni_caller_JniClientImplementation.h
src/main/jni/common/: CFunctionCall.cpp  CFunctionCall.h  CMakeLists.txt  JniCall.cpp  JniCall.h  JniEnvCall.cpp  JniEnvCall.h  JniEnvInterface.h  JniException.h  JniMessage.cpp  JniMessage.h  JniMessageFactory.cpp  JniMessageFactory.h  JniRawValue.h  JniValue.cpp  JniValue.h  JniValueFactory.cpp  JniValueFactory.h  SharedMemory.cpp  SharedMemory.h  backward.hpp  json.hpp
src/main/jni/example/: CMakeLists.txt  Example.c  Makefile  com_valjni_example_JniExample.h
src/main/jni_server/: .cproject  CMakeLists.txt  distclean.sh
src/main/jni_server/lib/: CMakeLists.txt  JniEnvProxy.cpp  JniEnvProxy.h  JniInterfaceWrapper.cpp  JniInterfaceWrapper.h  JniProcessor.cpp  JniProcessor.h  SharedObjectLoader.cpp  SharedObjectLoader.h
src/main/test/: CMakeLists.txt
src/main/test/src/: CMakeLists.txt
src/main/test/src/jni/client/: CMakeLists.txt  TestJniArgumentRepository.cpp  TestJniClient.cpp  TestJniEnvWrapper.cpp
src/main/test/src/jni/common/: CMakeLists.txt  TestJniValue.cpp  TestJniValueFactory.cpp  TestSharedMemory.cpp
src/main/test/src/jni_server/: CMakeLists.txt  TestJniProcessor.cpp
src/test/java/com/valjni/caller/: JniMessageTest.java
src/test/java/com/valjni/core/: JniProxyTest.java
